# raspberry-pi-i2c-sps30

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.sh  metadata.yml  sensirion_i2c_hal.c  sps30_i2c.c  sps30_i2c.h
example-usage/: CMakeLists.txt  sps30_i2c_example_usage.c
